# Vdc-del

./: .gitignore  CMakeLists.txt  README.md  basic_test.sh  exhaustive_test.sh  random_scalar_test.sh  selfI_Plan.md
data/: data
include/: vdc_debug.h  vdc_io.h
include/core/: vdc_commandline.h  vdc_debug.h  vdc_stats.h  vdc_timing.h  vdc_type.h  vdc_utilities.h
include/processing/: vdc_del_cycles.h  vdc_del_isosurface.h  vdc_delaunay.h  vdc_func.h  vdc_grid.h  vdc_refinement.h  vdc_sep_isov.h
src/: vdc_debug.cpp  vdc_del_main.cpp  vdc_io.cpp
src/core/: vdc_commandline.cpp  vdc_debug.cpp  vdc_stats.cpp  vdc_timing.cpp  vdc_utilities.cpp
src/processing/: vdc_del_cells.cpp  vdc_del_cycles.cpp  vdc_del_triangles.cpp  vdc_func_delaunay.cpp  vdc_grid.cpp  vdc_refinement.cpp  vdc_sep_isov.cpp
